--- a/NSch/NSch.csproj
+++ b/NSch/NSch.csproj
@@ -14,7 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mono.Math.Port" Version="1.0.0" />
     <PackageReference Include="Sharpen.Port" Version="1.0.0" />
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
